# hugs

./: .gitignore  Cargo.toml  README.md  SECURITY.md  flake.nix
benchmark/: README.md  benchmark.sh  cleanup.sh  generate-content.sh  results.md  run-benchmark.sh  setup.sh
benchmark/hugo-site/: config.toml
benchmark/hugo-site/content/: _index.md
benchmark/hugo-site/content/blog/: _index.md
benchmark/hugo-site/layouts/: index.html
benchmark/hugo-site/layouts/_default/: baseof.html  list.html  single.html
benchmark/hugs-site/: config.toml  index.md
benchmark/hugs-site/_/: footer.md  header.md  theme.css
benchmark/hugs-site/blog/: index.md
src/: build.rs  config.rs  console.rs  dev.rs  doc.rs  error.rs  feed.rs  highlight.rs  main.rs  minify.rs  new.rs  run.rs  sitemap.rs
src/templates/: root.jinja  sitemap.jinja
tutorial-site/: [404].md  about.md  config.toml  index.md
tutorial-site/_/: content.md  footer.md  header.md  nav.md  theme.css
tutorial-site/_/macros/: tryit.md
tutorial-site/blog/: [tag].md  assets.md  building-this-site.md  config.md  deployment.md  dynamic-paths.md  feeds.md  index.md  macros.md  pages-and-frontmatter.md  seo.md  syntax-highlighting.md  templating.md  theming.md  whats-next.md
